--- a/index.html/index.html
+++ b/index.html/index.html
@@ -3,320 +3,120 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Gestión de Trabajadores - Capacita SM</title>
+<title>Capacita SM - Acceso</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 <style>
 html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    font-family: Arial, sans-serif;
-    background: url('fondo.png') no-repeat center center fixed;
-    background-size: cover;
+    margin: 0; padding: 0; width: 100%; height: 100%; font-family: Arial, sans-serif;
+    background: url('fondo.png') no-repeat center center fixed; background-size: cover;
 }
-
-@media (max-width: 768px) {
-    body {
-        background-attachment: scroll;
-    }
-}
-
+@media (max-width: 768px) { body { background-attachment: scroll; } }
 #menuPrincipal, .seccion {
-    background-color: rgba(255,255,255,0.95);
-    padding: 20px;
-    border-radius: 10px;
-    margin: 20px auto;
-    max-width: 300px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+    background: rgba(255,255,255,0.95); padding: 20px; border-radius: 10px;
+    margin: 20px auto; max-width: 300px; box-shadow: 0 2px 5px rgba(0,0,0,0.3);
     text-align: center;
 }
-
 #menuPrincipal button, .boton-volver {
-    width: 100%;
-    margin: 10px 0;
-    padding: 12px;
-    font-size: 16px;
-    background-color: #4C7C46;
-    color: white;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
+    width: 100%; margin: 10px 0; padding: 12px; font-size: 16px;
+    background: #4C7C46; color: white; border: none; border-radius: 6px; cursor: pointer;
 }
-
-#menuPrincipal button:hover, .boton-volver:hover {
-    background-color: #3B6138;
+#menuPrincipal button:hover, .boton-volver:hover { background: #3B6138; }
+.curso-tile {
+    background: #A3C95A; padding: 10px; margin: 10px; display: inline-block;
+    width: 150px; text-align: center; border-radius: 6px; cursor: pointer;
 }
-
-#panelEmpresa {
-    display: none;
-    height: 100vh;
-    width: 100%;
-}
-
+#panelEmpresa { display: none; height: 100vh; width: 100%; }
 #menuLateral {
-    width: 250px;
-    background-color: rgba(255,255,255,0.95);
-    padding: 20px;
-    box-shadow: 2px 0 5px rgba(0,0,0,0.3);
-    display: flex;
-    flex-direction: column;
+    width: 250px; background: rgba(255,255,255,0.95); padding: 20px;
+    box-shadow: 2px 0 5px rgba(0,0,0,0.3); display: flex; flex-direction: column;
 }
-
-#menuLateral h3 {
-    color: #4C7C46;
-}
-
-#menuLateral button {
-    margin-top: 10px;
-    padding: 10px;
-    background-color: #4C7C46;
-    color: white;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    width: 100%;
-}
-
-#menuLateral button:hover {
-    background-color: #3B6138;
-}
-
-#contenidoEmpresa {
-    flex-grow: 1;
-    padding: 30px;
-    background-color: rgba(255,255,255,0.9);
-    margin: 20px;
-    border-radius: 10px;
-    overflow-y: auto;
-}
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-table th, table td {
-    padding: 8px;
-    text-align: left;
-    border: 1px solid #ddd;
-}
-
-table td input {
-    width: 100%;
-    border: none;
-    background: transparent;
-}
+#contenidoEmpresa { flex-grow: 1; padding: 30px; background: rgba(255,255,255,0.9); margin: 20px; border-radius: 10px; overflow-y: auto; }
+table { width: 100%; border-collapse: collapse; }
+table th, table td { padding: 8px; text-align: left; border: 1px solid #ddd; }
+table td input { width: 100%; border: none; background: transparent; }
 </style>
 </head>
-
 <body>
-
 <section id="menuPrincipal">
-    <h2>Acceso</h2>
+    <h2>ACCESO</h2>
+    <button onclick="mostrarTrabajador()">Trabajadores</button>
     <button onclick="mostrarLoginEmpresa()">Empresas</button>
 </section>
-
-<section id="loginEmpresa" class="seccion">
+<section id="seccionTrabajador" class="seccion" style="display:none">
+    <h2>Ingrese su RUT</h2>
+    <input type="text" id="rutAcceso" placeholder="RUT">
+    <button onclick="accederTrabajador()">Entrar</button>
+    <button class="boton-volver" onclick="volverMenu()">Volver</button>
+</section>
+<section id="mosaicoCursos" class="seccion" style="display:none">
+    <h2>Cursos Disponibles</h2>
+    <div class="curso-tile" onclick="verCurso()">Uso y Manejo de Extintores</div>
+    <button class="boton-volver" onclick="volverTrabajador()">Volver</button>
+</section>
+<section id="moduloCurso" class="seccion" style="display:none">
+    <h2>Módulo 1: Uso y Manejo de Extintores</h2>
+    <p>Los extintores deben estar visibles. <input type="text" id="p1"></p>
+    <p>Los extintores no requieren mantención. <input type="text" id="p2"></p>
+    <p>Se debe apuntar a la base del fuego. <input type="text" id="p3"></p>
+    <button onclick="finalizarModulo()">Finalizar Módulo</button>
+    <button class="boton-volver" onclick="volverCursos()">Volver</button>
+</section>
+<section id="evaluacionFinal" class="seccion" style="display:none">
+    <h2>Evaluación Final</h2>
+    <div id="preguntasFinal"></div>
+    <button onclick="finalizarEvaluacion()">Enviar Evaluación</button>
+    <p id="resultadoFinal"></p>
+    <button class="boton-volver" onclick="volverModulo()">Volver</button>
+</section>
+<section id="loginEmpresa" class="seccion" style="display:none">
     <h2>Acceso Empresas</h2>
     <input type="text" id="usuarioEmpresa" placeholder="Usuario">
     <input type="password" id="claveEmpresa" placeholder="Contraseña">
     <button onclick="accederEmpresa()">Entrar</button>
     <button class="boton-volver" onclick="volverMenu()">Volver</button>
 </section>
-
 <div id="panelEmpresa">
     <div id="menuLateral">
         <h3>Empresa XYZ</h3>
         <p>RUT: 12.345.678-9</p>
-        <button onclick="mostrarSeccionEmpresa('seccionIngreso')">Gestión de Trabajadores</button>
-        <button onclick="exportarTrabajadores()">Exportar a Excel</button>
-        <button onclick="document.getElementById('importador').click()">Importar CSV o Excel</button>
+        <button onclick="mostrarSeccionEmpresa()">Gestión de Trabajadores</button>
+        <button onclick="exportarTrabajadores()">Exportar</button>
+        <button onclick="document.getElementById('importador').click()">Importar</button>
         <input type="file" id="importador" accept=".csv,.xlsx" style="display:none" onchange="importarTrabajadores(this)">
         <button onclick="volverMenu()">Cerrar Sesión</button>
     </div>
-
     <div id="contenidoEmpresa">
-        <div id="seccionIngreso" class="seccion">
-            <h2>Gestión de Trabajadores</h2>
-
-            <h3>Agregar Trabajador</h3>
-            <input type="text" id="nombre" placeholder="Nombre Completo">
-            <input type="text" id="rut" placeholder="RUT">
-            <input type="text" id="cargo" placeholder="Cargo">
-            <input type="text" id="centro" placeholder="Centro de Trabajo">
-            <input type="date" id="fechaIngreso">
-            <button onclick="registrarTrabajador()">Agregar</button>
-
-            <h3>Listado de Trabajadores</h3>
-            <table>
-                <thead>
-                    <tr><th>RUT</th><th>Nombre</th><th>Cargo</th><th>Centro</th><th>Fecha Ingreso</th><th>Eliminar</th></tr>
-                </thead>
-                <tbody id="tablaTrabajadores"></tbody>
-            </table>
-        </div>
+        <h2>Listado de Trabajadores</h2>
+        <input type="text" id="nombre"><input type="text" id="rut"><input type="text" id="cargo">
+        <input type="text" id="centro"><input type="date" id="fechaIngreso">
+        <button onclick="registrarTrabajador()">Agregar</button>
+        <table><thead><tr><th>RUT</th><th>Nombre</th><th>Cargo</th><th>Centro</th><th>Fecha</th><th>Eliminar</th></tr></thead>
+        <tbody id="tablaTrabajadores"></tbody></table>
     </div>
 </div>
-
 <script>
-const usuarioValido = "empresa";
-const claveValida = "1234";
+const usuarioValido = "empresa", claveValida = "1234";
 let trabajadores = JSON.parse(localStorage.getItem("trabajadores")) || [];
-
-function ocultarTodo() {
-    document.querySelectorAll(".seccion").forEach(sec => sec.style.display = "none");
-    document.getElementById('menuPrincipal').style.display = "none";
-    document.getElementById('panelEmpresa').style.display = "none";
-}
-
-function volverMenu() {
-    ocultarTodo();
-    document.getElementById('menuPrincipal').style.display = 'block';
-}
-
-function mostrarLoginEmpresa() {
-    ocultarTodo();
-    document.getElementById('loginEmpresa').style.display = 'block';
-}
-
-function accederEmpresa() {
-    const usuario = document.getElementById('usuarioEmpresa').value.trim();
-    const clave = document.getElementById('claveEmpresa').value.trim();
-    if (usuario === usuarioValido && clave === claveValida) {
-        ocultarTodo();
-        document.getElementById('panelEmpresa').style.display = 'flex';
-        mostrarSeccionEmpresa('seccionIngreso');
-        actualizarTablaTrabajadores();
-    } else {
-        alert("Usuario o contraseña incorrectos");
-    }
-}
-
-function mostrarSeccionEmpresa(id) {
-    document.querySelectorAll('#contenidoEmpresa .seccion').forEach(sec => sec.style.display = "none");
-    document.getElementById(id).style.display = "block";
-}
-
-function registrarTrabajador() {
-    const nombre = document.getElementById('nombre').value.trim();
-    const rut = document.getElementById('rut').value.trim();
-    const cargo = document.getElementById('cargo').value.trim();
-    const centro = document.getElementById('centro').value.trim();
-    const fechaIngreso = document.getElementById('fechaIngreso').value;
-
-    if (!nombre || !rut || !cargo || !centro || !fechaIngreso) {
-        alert("Complete todos los campos");
-        return;
-    }
-
-    trabajadores.push({ nombre, rut, cargo, centro, fechaIngreso });
-    localStorage.setItem("trabajadores", JSON.stringify(trabajadores));
-
-    limpiarCamposIngreso();
-    actualizarTablaTrabajadores();
-}
-
-function actualizarTablaTrabajadores() {
-    const tabla = document.getElementById('tablaTrabajadores');
-    tabla.innerHTML = "";
-    trabajadores.forEach((t, index) => {
-        tabla.innerHTML += `<tr>
-            <td><input value="${t.rut}" onchange="editarTrabajador(${index}, 'rut', this.value)"></td>
-            <td><input value="${t.nombre}" onchange="editarTrabajador(${index}, 'nombre', this.value)"></td>
-            <td><input value="${t.cargo}" onchange="editarTrabajador(${index}, 'cargo', this.value)"></td>
-            <td><input value="${t.centro}" onchange="editarTrabajador(${index}, 'centro', this.value)"></td>
-            <td><input type="date" value="${t.fechaIngreso}" onchange="editarTrabajador(${index}, 'fechaIngreso', this.value)"></td>
-            <td><button onclick="eliminarTrabajador(${index})">Eliminar</button></td>
-        </tr>`;
-    });
-}
-
-function editarTrabajador(index, campo, valor) {
-    trabajadores[index][campo] = valor;
-    localStorage.setItem("trabajadores", JSON.stringify(trabajadores));
-}
-
-function eliminarTrabajador(index) {
-    if (confirm("¿Está seguro de eliminar este trabajador?")) {
-        trabajadores.splice(index, 1);
-        localStorage.setItem("trabajadores", JSON.stringify(trabajadores));
-        actualizarTablaTrabajadores();
-    }
-}
-
-function exportarTrabajadores() {
-    let csv = "RUT,Nombre,Cargo,Centro,Fecha Ingreso\n";
-    trabajadores.forEach(t => {
-        csv += `${t.rut},${t.nombre},${t.cargo},${t.centro},${t.fechaIngreso}\n`;
-    });
-    const blob = new Blob([csv], { type: 'text/csv;charset=utf-8;' });
-    const link = document.createElement("a");
-    link.href = URL.createObjectURL(blob);
-    link.download = "listado_trabajadores.csv";
-    link.click();
-}
-
-function importarTrabajadores(input) {
-    const archivo = input.files[0];
-    if (!archivo) return;
-
-    const lector = new FileReader();
-    lector.onload = function(e) {
-        const nombreArchivo = archivo.name.toLowerCase();
-        
-        if (nombreArchivo.endsWith(".csv")) {
-            const contenido = e.target.result;
-            const lineas = contenido.split('\n').map(l => l.trim()).filter(l => l);
-
-            if (lineas[0].toLowerCase().includes("rut") && lineas[0].toLowerCase().includes("nombre")) {
-                lineas.shift();
-            }
-
-            lineas.forEach(linea => {
-                const [rut, nombre, cargo, centro, fechaIngreso] = linea.split(',');
-                if (rut && nombre && cargo && centro && fechaIngreso) {
-                    trabajadores.push({ rut, nombre, cargo, centro, fechaIngreso });
-                }
-            });
-
-        } else if (nombreArchivo.endsWith(".xlsx")) {
-            const workbook = XLSX.read(e.target.result, { type: 'binary' });
-            const hoja = workbook.Sheets[workbook.SheetNames[0]];
-            const datos = XLSX.utils.sheet_to_json(hoja);
-
-            datos.forEach(d => {
-                if (d.RUT && d.Nombre && d.Cargo && d.Centro && d['Fecha Ingreso']) {
-                    trabajadores.push({
-                        rut: d.RUT, nombre: d.Nombre, cargo: d.Cargo,
-                        centro: d.Centro, fechaIngreso: d['Fecha Ingreso']
-                    });
-                }
-            });
-        }
-
-        localStorage.setItem("trabajadores", JSON.stringify(trabajadores));
-        actualizarTablaTrabajadores();
-        alert("Importación completada");
-    };
-
-    if (archivo.name.endsWith(".xlsx")) {
-        lector.readAsBinaryString(archivo);
-    } else {
-        lector.readAsText(archivo);
-    }
-
-    input.value = "";
-}
-
-function limpiarCamposIngreso() {
-    document.getElementById('nombre').value = "";
-    document.getElementById('rut').value = "";
-    document.getElementById('cargo').value = "";
-    document.getElementById('centro').value = "";
-    document.getElementById('fechaIngreso').value = "";
-}
+function ocultarTodo(){document.querySelectorAll(".seccion").forEach(s=>s.style.display="none"); document.getElementById('menuPrincipal').style.display="none"; document.getElementById('panelEmpresa').style.display="none";}
+function volverMenu(){ocultarTodo();document.getElementById('menuPrincipal').style.display='block';}
+function mostrarTrabajador(){ocultarTodo();document.getElementById('seccionTrabajador').style.display='block';}
+function mostrarLoginEmpresa(){ocultarTodo();document.getElementById('loginEmpresa').style.display='block';}
+function accederTrabajador(){const r=document.getElementById('rutAcceso').value.trim();if(trabajadores.find(t=>t.rut===r)){ocultarTodo();document.getElementById('mosaicoCursos').style.display='block';}else{alert("RUT no registrado");}}
+function volverTrabajador(){mostrarTrabajador();}
+function verCurso(){ocultarTodo();document.getElementById('moduloCurso').style.display='block';}
+function volverCursos(){document.getElementById('mosaicoCursos').style.display='block';}
+function volverModulo(){document.getElementById('moduloCurso').style.display='block';}
+function finalizarModulo(){const p1=document.getElementById('p1').value.trim().toLowerCase(),p2=document.getElementById('p2').value.trim().toLowerCase(),p3=document.getElementById('p3').value.trim().toLowerCase();if(p1=="verdadero"&&p2=="falso"&&p3=="verdadero"){ocultarTodo();document.getElementById('evaluacionFinal').style.display='block';cargarEvaluacionFinal();}else{alert("Respuestas incorrectas");}}
+function cargarEvaluacionFinal(){const c=document.getElementById('preguntasFinal');c.innerHTML="";[["¿Extintores visibles?","si"],["¿No necesitan mantención?","no"],["¿Apuntar a base del fuego?","si"]].forEach((p,i)=>{c.innerHTML+=`${p[0]}<br><input id='final${i}'><br>`;});}
+function finalizarEvaluacion(){let c=0;[["¿Extintores visibles?","si"],["¿No necesitan mantención?","no"],["¿Apuntar a base del fuego?","si"]].forEach((p,i)=>{if(document.getElementById(`final${i}`).value.trim().toLowerCase()===p[1])c++;});document.getElementById('resultadoFinal').textContent=c>=3?"¡Aprobado!":"Debe repetir";}
+function accederEmpresa(){if(document.getElementById('usuarioEmpresa').value.trim()===usuarioValido&&document.getElementById('claveEmpresa').value.trim()===claveValida){ocultarTodo();document.getElementById('panelEmpresa').style.display='flex';actualizarTabla();}else{alert("Credenciales incorrectas");}}
+function mostrarSeccionEmpresa(){actualizarTabla();}
+function registrarTrabajador(){const n=document.getElementById('nombre').value.trim(),r=document.getElementById('rut').value.trim(),c=document.getElementById('cargo').value.trim(),ce=document.getElementById('centro').value.trim(),f=document.getElementById('fechaIngreso').value;if(n&&r&&c&&ce&&f){trabajadores.push({nombre:n,rut:r,cargo:c,centro:ce,fechaIngreso:f});localStorage.setItem("trabajadores",JSON.stringify(trabajadores));actualizarTabla();}else{alert("Complete todos los campos");}}
+function actualizarTabla(){const t=document.getElementById('tablaTrabajadores');t.innerHTML="";trabajadores.forEach((tr,i)=>{t.innerHTML+=`<tr><td>${tr.rut}</td><td>${tr.nombre}</td><td>${tr.cargo}</td><td>${tr.centro}</td><td>${tr.fechaIngreso}</td><td><button onclick='eliminarTrabajador(${i})'>Eliminar</button></td></tr>`;});}
+function eliminarTrabajador(i){if(confirm("Eliminar trabajador?")){trabajadores.splice(i,1);localStorage.setItem("trabajadores",JSON.stringify(trabajadores));actualizarTabla();}}
+function exportarTrabajadores(){let c="RUT,Nombre,Cargo,Centro,Fecha Ingreso\n";trabajadores.forEach(t=>{c+=`${t.rut},${t.nombre},${t.cargo},${t.centro},${t.fechaIngreso}\n`;});const b=new Blob([c],{type:'text/csv'}),l=document.createElement("a");l.href=URL.createObjectURL(b);l.download="trabajadores.csv";l.click();}
+function importarTrabajadores(inp){const f=inp.files[0];if(!f)return;const r=new FileReader();r.onload=e=>{if(f.name.endsWith(".csv")){e.target.result.split('\n').forEach(l=>{const[d1,d2,d3,d4,d5]=l.split(',');if(d1&&d2&&d3&&d4&&d5)trabajadores.push({rut:d1,nombre:d2,cargo:d3,centro:d4,fechaIngreso:d5});});}else{const wb=XLSX.read(e.target.result,{type:'binary'});XLSX.utils.sheet_to_json(wb.Sheets[wb.SheetNames[0]]).forEach(d=>{if(d.RUT&&d.Nombre)trabajadores.push({rut:d.RUT,nombre:d.Nombre,cargo:d.Cargo,centro:d.Centro,fechaIngreso:d['Fecha Ingreso']});});}localStorage.setItem("trabajadores",JSON.stringify(trabajadores));actualizarTabla();};if(f.name.endsWith(".xlsx"))r.readAsBinaryString(f);else r.readAsText(f);inp.value="";}
 </script>
-
 </body>
 </html>
+
