--- a/index.html/index.html
+++ b/index.html/index.html
@@ -21,10 +21,8 @@ html, body {
     background: #4C7C46; color: white; border: none; border-radius: 6px; cursor: pointer;
 }
 #menuPrincipal button:hover, .boton-volver:hover { background: #3B6138; }
-.curso-tile {
-    background: #A3C95A; padding: 10px; margin: 10px; display: inline-block;
-    width: 150px; text-align: center; border-radius: 6px; cursor: pointer;
-}
+.curso-tile {  background: #A3C95A;padding: 15px;text-align: center;border-radius: 6px;cursor: pointer;font-weight: bold;transition: transform 0.2s;}
+.curso-tile:hover {background: #4C7C46;color: white;transform: scale(1.05);}
 #panelEmpresa { display: none; height: 100vh; width: 100%; }
 #menuLateral {
     width: 250px; background: rgba(255,255,255,0.95); padding: 20px;
