--- a/index.html/index.html
+++ b/index.html/index.html
@@ -6,28 +6,20 @@
 <title>Capacita SM - Acceso</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 <style>
-html, body {
-    margin: 0; padding: 0; width: 100%; height: 100%; font-family: Arial, sans-serif;
-    background: url('fondo.png') no-repeat center center fixed; background-size: cover;
-}
+html, body {margin: 0; padding: 0; width: 100%; height: 100%; font-family: Arial, sans-serif;background: url('fondo.png') no-repeat center center fixed; background-size: cover;}
 @media (max-width: 768px) { body { background-attachment: scroll; } }
-#menuPrincipal, .seccion {
-    background: rgba(255,255,255,0.95); padding: 20px; border-radius: 10px;
-    margin: 20px auto; max-width: 300px; box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-    text-align: center;
-}
-#menuPrincipal button, .boton-volver {
-    width: 100%; margin: 10px 0; padding: 12px; font-size: 16px;
-    background: #4C7C46; color: white; border: none; border-radius: 6px; cursor: pointer;
-}
+#menuPrincipal, .seccion {background: rgba(255,255,255,0.95); padding: 20px; border-radius: 10px;margin: 20px auto; max-width: 300px; box-shadow: 0 2px 5px rgba(0,0,0,0.3);text-align: center;}
+#menuPrincipal button, .boton-volver {width: 100%; margin: 10px 0; padding: 12px; font-size: 16px;background: #4C7C46; color: white; border: none; border-radius: 6px; cursor: pointer;}
 #menuPrincipal button:hover, .boton-volver:hover { background: #3B6138; }
-.curso-tile {  background: #A3C95A;padding: 15px;text-align: center;border-radius: 6px;cursor: pointer;font-weight: bold;transition: transform 0.2s;}
-.curso-tile:hover {background: #4C7C46;color: white;transform: scale(1.05);}
+#mosaicoCursos { display: none; max-width: 1200px; margin: 20px auto; padding: 10px; }
+#tituloCursos { background: white; padding: 20px; border-radius: 8px; text-align: center; margin-bottom: 20px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+#gridCursos { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; }
+.curso-tile { background: #fff; padding: 20px; text-align: center; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); cursor: pointer; transition: transform 0.2s, box-shadow 0.2s; display: flex; flex-direction: column; align-items: center; }
+.curso-tile:hover { transform: translateY(-5px); box-shadow: 0 4px 10px rgba(0,0,0,0.2); background: #A3C95A; color: white; }
+button { background: #4C7C46; color: white; border: none; padding: 10px 20px; margin-top: 30px; border-radius: 6px; cursor: pointer; }
+button:hover { background: #3B6138; }
 #panelEmpresa { display: none; height: 100vh; width: 100%; }
-#menuLateral {
-    width: 250px; background: rgba(255,255,255,0.95); padding: 20px;
-    box-shadow: 2px 0 5px rgba(0,0,0,0.3); display: flex; flex-direction: column;
-}
+#menuLateral { width: 250px; background: rgba(255,255,255,0.95); padding: 20px;box-shadow: 2px 0 5px rgba(0,0,0,0.3); display: flex; flex-direction: column;}
 #contenidoEmpresa { flex-grow: 1; padding: 30px; background: rgba(255,255,255,0.9); margin: 20px; border-radius: 10px; overflow-y: auto; }
 table { width: 100%; border-collapse: collapse; }
 table th, table td { padding: 8px; text-align: left; border: 1px solid #ddd; }
@@ -35,7 +27,7 @@ table td input { width: 100%; border: none; background: transparent; }
 </style>
 </head>
 <body>
-<section id="menuPrincipal">
+<section id="menuPrincipal">    
     <h2>ACCESO</h2>
     <button onclick="mostrarTrabajador()">Trabajadores</button>
     <button onclick="mostrarLoginEmpresa()">Empresas</button>
@@ -47,7 +39,7 @@ table td input { width: 100%; border: none; background: transparent; }
     <button class="boton-volver" onclick="volverMenu()">Volver</button>
 </section>
    <section id="mosaicoCursos" class="seccion" style="display:none; max-width: 100%; background: transparent; box-shadow: none;">
-    <h2 style="background: rgba(255,255,255,0.95); padding: 15px; border-radius: 10px; display: inline-block;">Cursos Disponibles</h2>
+    <h2 style="background: rgba(255,255,255,0.95); padding: 15px; border-radius: 10px; display: inline-block;">Capacitaciones </h2>
     
     <div id="gridCursos" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; margin: 20px;">
         
